feat - prepared package.json to upload library in npm

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "windows-lib",
   "version": "0.1.0",
-  "private": true,
+  "author": "Veronica Dip <dipmveronica@gmail.com> (https://veronicadip.github.io)",
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
