feat - made npm public

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "windows-lib",
+  "name": "windows98-lib",
   "version": "0.1.0",
   "author": "Veronica Dip <dipmveronica@gmail.com> (https://veronicadip.github.io)",
   "private": false,
